# ztimehelp

./: .gitignore  API_CONFIGURATION.md  INSTALLATION.md  README.md  example-config.env  pyproject.toml  setup_env.sh  start.sh  test.py
src/time_entry_helper/: __init__.py  cli.py  config.py
src/ztimehelp/: __init__.py  cli.py  config.py
src/ztimehelp/data/: github.py  make_output.py  utils.py  zoom.py
tests/: test_cli.py
